bugfix - ChatMessageToolbar updated to be visible inside all types of message blocks regardless of it's state

--- a/src/content/ChatMessageToolbar/ChatMessageToolbar.module.scss
+++ b/src/content/ChatMessageToolbar/ChatMessageToolbar.module.scss
@@ -1,6 +1,5 @@
 .ads-chat-message-toolbar {
-	display: inline-flex;
-	float: right;
+	display: flex;
 	border: 1.5px solid #d1d5db;
 	border-radius: 4px;
 	overflow: hidden;
